--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -5,7 +5,7 @@ name: Docker CD
 on:
   push:
     paths:
-      - "**Dockerfile**"
+      - "Dockerfile"
 jobs:
   build:
     runs-on: ubuntu-latest
